Create documentation api json yaml in swagger.
