# modules/v1/activities/interfaces/controllers/activity_controller.go
@@ -16,8 +16,8 @@ import (
 // @Tags Activity
 // @Accept json
 // @Produce json
-// @Success 200 {object} api.SuccessResponse
-// @Failure 500 {object} api.ErrorResponse
+// @Success 200 {object} api.ResponseSuccess
+// @Failure 500 {object} api.ResponseError
 // @Router /activity-groups [get]
 func (uc *ActivityController) GetAllActivity(c *fiber.Ctx) error {
 	activity, err := uc.activityUsecase.GetAllActivity()
@@ -37,9 +37,9 @@ func (uc *ActivityController) GetAllActivity(c *fiber.Ctx) error {
 // @Accept json
 // @Produce json
 // @Param id path string true "Activity ID"
-// @Success 200 {object} api.SuccessResponse
-// @Failure 404 {object} api.ErrorResponse
-// @Failure 500 {object} api.ErrorResponse
+// @Success 200 {object} api.ResponseSuccess
+// @Failure 404 {object} api.ResponseError
+// @Failure 500 {object} api.ResponseError
 // @Router /activity-groups/{id} [get]
 func (uc *ActivityController) GetActivityByID(c *fiber.Ctx) error {
 	id := c.Params("id")
@@ -63,11 +63,10 @@ func (uc *ActivityController) GetActivityByID(c *fiber.Ctx) error {
 // @Tags Activity
 // @Accept json
 // @Produce json
-// @Param title body string true "Activity Title"
-// @Param email body string false "Activity Email"
-// @Success 201 {object} api.SuccessResponse
-// @Failure 400 {object} api.ErrorResponse
-// @Failure 500 {object} api.ErrorResponse
+// @Param body body domain.Activities true "Activities Request"
+// @Success 201 {object} api.ResponseSuccess
+// @Failure 400 {object} api.ResponseError
+// @Failure 500 {object} api.ResponseError
 // @Router /activity-groups [post]
 func (uc *ActivityController) CreateActivity(c *fiber.Ctx) error {
 	var (
@@ -116,12 +115,11 @@ func (uc *ActivityController) CreateActivity(c *fiber.Ctx) error {
 // @Accept json
 // @Produce json
 // @Param id path string true "Activity ID"
-// @Param title body string true "Activity Title"
-// @Param email body string false "Activity Email"
-// @Success 200 {object} api.SuccessResponse
-// @Failure 400 {object} api.ErrorResponse
-// @Failure 404 {object} api.ErrorResponse
-// @Failure 500 {object} api.ErrorResponse
+// @Param body body domain.Activities true "Activities Request"
+// @Success 200 {object} api.ResponseSuccess
+// @Failure 400 {object} api.ResponseError
+// @Failure 404 {object} api.ResponseError
+// @Failure 500 {object} api.ResponseError
 // @Router /activity-groups/{id} [patch]
 func (uc *ActivityController) UpdateActivity(c *fiber.Ctx) error {
 	var (
@@ -162,9 +160,9 @@ func (uc *ActivityController) UpdateActivity(c *fiber.Ctx) error {
 // @Accept json
 // @Produce json
 // @Param id path string true "Activity ID"
-// @Success 200 {object} api.SuccessResponse
-// @Failure 404 {object} api.ErrorResponse
-// @Failure 500 {object} api.ErrorResponse
+// @Success 200 {object} api.ResponseSuccess
+// @Failure 404 {object} api.ResponseError
+// @Failure 500 {object} api.ResponseError
 // @Router /activity-groups/{id} [delete]
 func (uc *ActivityController) DeleteActivity(c *fiber.Ctx) error {
 	id := c.Params("id")
